Fix get-started demo page overflow

--- a/demo/src/scss/material-theme.scss
+++ b/demo/src/scss/material-theme.scss
@@ -43,6 +43,7 @@
     border-radius: 3px;
     font-size: 0.94em;
     padding: 0px 6px 2px;
+    overflow-wrap: break-word;
   }
 
   hr {
